@@ -1,4 +1,5 @@
-* FEA7681 Add management start date and management end date to claims
+* BUG#8102 The companies on parties are sorted by affiliation start date (descending)
+* FEA#7681 Add management start date and management end date to claims
 
 Version 1.14 - 2017-11-09
 * FEA#6502 Allow to define default claim termination behavior
